[build] bump java from 14 to 16